apache-webserver/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache-container
          image: ghcr.io/kacper08480/docker-apache-webserver:port8080
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-config
              mountPath: /usr/local/apache2/conf/httpd.conf
              subPath: httpd.conf
      volumes:
        - name: app-config
          configMap:
            name: app-config
