apache-webserver/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webserver.route
spec:
  to:
    kind: Service
    name: webserver-service
  port:
    targetPort: 80
  tls:
    termination: edge
